syntax = "proto3";

option csharp_namespace = "Shared.Contracts";

package shared;

// Common error response that can be used across all services
message ErrorResponse {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

